--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by ScriptKiddy. It uses mapbox and Weathersky APIs</p>
             <img class='portrait' src="./img/profile.jpg" style="width: 250px;"/>
         </div>
         {{>footer}}    
